--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 *.userosscache
 *.sln.docstates
 
+/UserSettings/QuickSearch.settings
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
