--- a/Packages/com.zebugger.zebug/package.json
+++ b/Packages/com.zebugger.zebug/package.json
@@ -3,7 +3,7 @@
   "displayName": "Zebug",
   "version": "0.3.0",
   "unity": "2019.4",
-  "description": "A Debug system, with a togglable heirarchy of channels.",
+  "description": "A Debug system, with a togglable hierarchy of channels.",
   "keywords": [
     "Zebug",
     "debug",
