--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 *.userosscache
 *.sln.docstates
 
-/UserSettings/QuickSearch.settings
+[Uu]serSettings/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
