--- a/Packages/com.zebugger.zebug/package.json
+++ b/Packages/com.zebugger.zebug/package.json
@@ -1,13 +1,16 @@
 {
   "name": "com.zebugger.zebug",
   "displayName": "Zebug",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "unity": "2019.4",
   "description": "A Debug system, with a togglable hierarchy of channels.",
   "keywords": [
     "Zebug",
     "debug",
-    "tool"
+    "tool",
+    "logging",
+    "channels",
+    "gizmos"
   ],
   "category": "Libraries",
   "type": "library",
