--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,16 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.15",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.collab-proxy": "1.17.7",
+    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.quicksearch": "2.0.2",
-    "com.unity.render-pipelines.universal": "10.8.1",
+    "com.unity.render-pipelines.universal": "12.1.9",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.ui": "1.0.0-preview.16",
-    "com.unity.ui.builder": "1.0.0-preview.17",
+    "com.unity.ui": "2.0.0",
+    "com.unity.ui.builder": "2.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
